# Infinite-Autoclicker

./: .env.example  .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
e2e/: run.mjs
scripts/: check-no-network.mjs
src/: app.tsx  main.tsx  store.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: core.rs  lib.rs  main.rs  storage.rs  util.rs
src-tauri/src/engine/: autoclick.rs  color_trigger.rs  failsafe.rs  hotkeys.rs  mod.rs  player.rs  recorder.rs  scheduler.rs  screen.rs  vision.rs
src-tauri/src/input/: backend.rs  coords.rs  cursor.rs  enigo_backend.rs  key_codes.rs  listener.rs  mod.rs  permissions.rs  rdev_backend.rs
src-tauri/src/ipc/: commands.rs  events.rs
src-tauri/src/model/: macros.rs  mod.rs  settings.rs  vision.rs
src/components/: Inspector.tsx  RunBar.tsx  RunControls.tsx  StatusBar.tsx  Toasts.tsx  TopBar.tsx
src/components/AutoClicker/: AutoClicker.tsx
src/components/ColorTrigger/: ColorTrigger.tsx
src/components/EventList/: EventList.tsx
src/components/Onboarding/: Banners.tsx
src/components/Scheduler/: Scheduler.tsx
src/components/Settings/: Settings.tsx
src/components/StepBuilder/: StepBuilder.tsx
src/components/Timeline/: Timeline.tsx
src/components/ui/: ConfirmDialog.tsx  button.tsx  capture-button.tsx  (+15 more)
src/lib/: compile.ts  ipc.ts  keymap.ts  tabs.tsx  types.ts  utils.ts
src/styles/: globals.css
